# authen_company_packageB

./: .env  .env.example  .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  test_app.py
SampleTesting/: kido_projects_lots_FULL_20250926_101325.xlsx
fastapi_account_manager/: __init__.py  main.py
fastapi_account_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fastapi_account_manager/middlewares/: auth_guard.py  auth_middleware.py  rbac_guard.py
fastapi_account_manager/routers/: _shared.py  accounts.py  admin.py  auth.py  (+1 more)
routers/: account.py  announcements.py  api_proxy.py  auction_banned_persons.py  auction_counting.py  auction_docs.py  auction_documents_print.py  auction_prints.py  auction_results.py  auction_session_bid_sheets.py  auction_session_display.py  auction_session_winner_prints.py  auction_sessions.py  bank_transactions.py  bid_attendance.py  bid_attendance_exclusions.py  bid_tickets.py  billing.py  company_mailers.py  customer_documents.py  customers.py  dashboard.py  deposit_refunds.py  documents.py  dossier_buyers.py  guide.py  invoice_exports.py  lots.py  otp_admin.py  project_payment_accounts.py  projects.py  projects_io.py  reports.py  reports_export.py  reports_group.py  reports_v2.py  send_info_dossier.py  settings_bank_accounts.py  settings_company.py  transactions.py
services/: admin_client.py  auction_docs_client.py  bank_client_async.py  dashboard_service.py  orders_client.py
static/: style.css
templates/: base.html
utils/: auth.py  excel_import.py  excel_templates.py  templates.py
(+131 files in other folders)
