[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-account-manager"
version = "0.1.0"
description = "Plug-and-play account manager (UI + middleware) for FastAPI using fastapi-authen"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "jinja2>=3.1",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "fastapi-authen==0.1.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fastapi_account_manager*"]

[tool.setuptools.package-data]
"fastapi_account_manager" = ["templates/**/*", "static/**/*"]

[project.optional-dependencies]
dev = ["build", "twine", "pytest"]
